2008-09-18  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: updated version number to 2.15.0 for development.

	* ChangeLog.pre-2-14: rotate ChangeLog

=== Branch for 2.14 ===