@@ -2,9 +2,9 @@
 #
 # Copyright (C) 2003, 2004 Raymond Penners <raymond@dotsphinx.com>
 #
-# $Id$
+# $Id: Makefile.msc,v 1.3 2004/05/21 19:02:59 cinamod Exp $
 
-!INCLUDE ../Makefile.msc.config
+!INCLUDE Makefile.msc.config
 
 ##
 # Target
@@ -49,7 +49,7 @@ WIN32_LIBS = \
 	gdi32.lib \
 	user32.lib
 
-WIN32_CFLAGS=-I"$(SDK_DIR)"
+WIN32_CFLAGS=-I"$(SDK_DIR)\gtk-2.0" -I"$(SDK_DIR)\cairo" -I"$(SDK_DIR)\glib-2.0" -DBUILDING_STANDALONE
 WIN32_LDFLAGS=/DLL /SUBSYSTEM:WINDOWS
 
 ##
