@@ -1,0 +1,11 @@
+# Makefile.msc.config -- Configuration file (-*- makefile -*-)
+#
+# Copyright (C) 2003 Raymond Penners <raymond@dotsphinx.com>
+#
+# $Id: Makefile.msc.config,v 1.6 2005/06/26 15:22:03 cinamod Exp $
+
+##
+# Please configure this to match your setup.
+GTK_DIR=C:\Progra~1\Common~1\gtk\2.0
+INSTALL_DIR=$(GTK_DIR)\lib\gtk-2.0\2.10.0\engines
+SDK_DIR=$(GTK_DIR)\include
